navigation css added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 <div class="banner__paragraph">
                     <p>The Greatest Entrepreneur Party & Conference on the planet.</p>
                 </div>
-                <button href="#" class="banner__button" target="_blank">get your tickets</button>
+                <button href="#" class="banner__button" target="_blank">
+                    <a href="#" class="banner__button-link">
+                        get your tickets
+                    </a>
+                </button>
             </div>
         </div>
         
@@ -49,7 +53,7 @@
                 <a href="#">
                     <img src="https://youcode.pl/html-css-wyzwanie-2/files/Rectangle-3-copy.png" alt="logo" class="navigation__logo">
                 </a>
-                <ul class="navigation__menu js-navigation__menu">
+                <ul class="navigation__menu">
                     <li class="navigation__menu-item">
                         <a data-scroll href="#about" class="navigation__menu-link">
                             about event
@@ -81,6 +85,31 @@
     <!--sekcja z ZEGAREM-->
 
     <section class="container">
+        <div class="counter">
+            <div class="counter__inner">
+                <div class="counter__text">
+                    event starts in:
+                </div>
+                <div class="counter__items">
+                    <div class="counter__item">
+                        <div class="counter__number">217</div>
+                        <div class="counter__label">days</dvi>
+                    </div>
+                    <div class="counter__item">
+                        <div class="counter__number">2</div>
+                        <div class="counter__label">hours</dvi>
+                    </div>
+                    <div class="counter__item">
+                        <div class="counter__number">50</div>
+                        <div class="counter__label">min</dvi>
+                    </div>
+                    <div class="counter__item">
+                        <div class="counter__number">7</div>
+                        <div class="counter__label">sec</dvi>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
