counter css added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="description" content="KALLYAS - challenge#2 z YouCode">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kallyas</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/counter.css">
 </head>
 
 <body>
@@ -92,20 +93,20 @@
                 </div>
                 <div class="counter__items">
                     <div class="counter__item">
-                        <div class="counter__number">217</div>
-                        <div class="counter__label">days</dvi>
+                        <div class="counter__number">215</div>
+                        <div class="counter__label">days</div>
                     </div>
                     <div class="counter__item">
                         <div class="counter__number">2</div>
-                        <div class="counter__label">hours</dvi>
+                        <div class="counter__label">hours</div>
                     </div>
                     <div class="counter__item">
                         <div class="counter__number">50</div>
-                        <div class="counter__label">min</dvi>
+                        <div class="counter__label">min</div>
                     </div>
                     <div class="counter__item">
                         <div class="counter__number">7</div>
-                        <div class="counter__label">sec</dvi>
+                        <div class="counter__label">sec</div>
                     </div>
                 </div>
             </div>
