--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/newsletter.css">
 </head>
 
 <body>
@@ -215,17 +216,19 @@
 
     <!--sekcja NEWSLETTER-->
 
-    <section id="newsletter">
-        <h3>newsletter</h3>
-        <p>Subscribe to the newsletter to receive the latest informations and news about Kallyas Business 
+    <section id="newsletter" class="newsletter">
+        <h3 class="newsletter__haeder">newsletter</h3>
+        <p class="newsletter__text">Subscribe to the newsletter to receive the latest informations and news about Kallyas Business 
             Conference.</p>
-        <input placeholder="your.address@email.com">
-        <button>join us</button>
+        <input placeholder="your.address@email.com" class="newsletter__input">
+        <button class="newsletter__button">
+            <a href="#" class="newsletter__button-link">join us</a>
+        </button>
     </section>
 
     <!--STOPKA-->
 
-    <section>
+    <section class="footer">
 
     </section>
 
