footer css added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/info.css">
     <link rel="stylesheet" href="css/newsletter.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -229,7 +230,9 @@
     <!--STOPKA-->
 
     <section class="footer">
-
+        <p class="footer__text">
+            &copy; Aneta Damaszke 2020 wyzwanie#2 od YouCode
+        </p>
     </section>
 
 </body>
