--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section>
         <nav class="navigation">
-            <div class="navigation__inner">
+            <div class="navigation__inner container">
                 <a href="#">
                     <img src="https://youcode.pl/html-css-wyzwanie-2/files/Rectangle-3-copy.png" alt="logo" class="navigation__logo">
                 </a>
@@ -81,9 +81,7 @@
                         </a>
                     </li>
                 </ul>
-                <button class="navigation__mobile-button js-navigation__mobile-button">
-                    <img src="#" alt="Otwórz / zamknij nawigację" class="navigation__mobile-button-img">
-                </button>
+        
             </div>
         </nav>
     </section>
@@ -206,7 +204,7 @@
                     <li class="info__list-item">event access</li>
                     <li class="info__list-item">catering food</li>
                     <li class="info__list-item">talk with speakers</li>
-                    <li class="info__list-item">bonus + 2 free access<br>to future events</li>
+                    <li class="info__list-item">bonus + 2 free access to future events</li>
                 </ul>
                 <button class="info__button">
                     <a href="#" class="info__button-link">buy ticket</a>
